--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,9 @@
 robotframework
+robotframework-selenium2library
+robotframework-seleniumlibrary
 requests
 mysql-connector-python
 python-dotenv
 pandas
+python-docx
 openpyxl
